@@ -1,5 +1,8 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
+	- new config symbol, EV_USE_CLOCK_SYSCALL, to make libev use
+          a direct syscall - slower, but no dependency on librt et al.
+
 3.49 Wed Nov 19 11:26:53 CET 2008
 	- ev_stat watchers will now use inotify as a mere hint on
           kernels <2.6.25, or if the filesystem is not in the
